testing weird look on iOS fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ body {
     margin: 0;
 }
 
+body>* {
+    -webkit-appearance: none;
+}
+
 
 a {
     color: inherit;
